# actions

./: .coverage  .gitignore  README.md  main.py  nohup.out  pyproject.toml
.github/workflows/: ci-python.yml  ci.yml  project-ci.yml
reports/: bandit.json  coverage.xml  docs.json  pytest-report.xml  ruff-details.json  ruff.json
src/actions/: __init_.py  main.py
tests/: test_main.py
