[project]
name = "actions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.5.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
    "pytest-coverage>=0.0",
    "ruff>=0.14.7",
    "sphinx>=9.0.1",
]

